<resources>
    <string name="app_name">Pomodoro Todo</string>

    <!--    bottom nav item title-->
    <string name="text_pomodoro">Pomodoro</string>
    <string name="text_todo">Todo</string>
    <string name="text_settings">Settings</string>
    <string name="text_options">Options</string>
    <!--    bottom nav item title-->

    <!--    pomodoro fragment-->
    <string name="text_btn_pomodoro">pomodoro</string>
    <string name="text_btn_short_break">short break</string>
    <string name="text_btn_long_break">long break</string>
    <string name="text_restart_countdown">restart countdown</string>
    <string name="text_btn_start">start</string>
    <string name="text_btn_pause">pause</string>
    <string name="text_btn_resume">resume</string>
    <string name="text_timer_5">05:00</string>
    <string name="text_timer_10">10:00</string>
    <string name="text_timer_25">25:00</string>
    <!--    to do list fragment-->

    <!--    to do list fragment-->
    <string name="text_empty_task">There is no tasks yet. Let\'s set to start our day.</string>
    <string name="text_sample_quote">“Either you run the day or the day runs you.” — Jim Rohn</string>
    <string name="text_header_content">“Drag your %1$s tasks here”</string>
    <string name="text_to_do_list">To do list</string>
    <string name="text_previous">Previous</string>
    <string name="text_today">Today</string>
    <string name="text_tomorrow">Tomorrow</string>
    <string name="text_next_7_days">Next 7 days</string>
    <string name="text_add_task">Add Task</string>
    <string name="text_edit_task">Edit Task</string>
    <string name="text_category">Category</string>
    <string name="text_reminder">Reminder</string>
    <string name="text_priority">Priority</string>
    <string name="text_description">Description</string>
    <string name="text_create_new_task_here">Create new task here</string>
    <string name="text_time">Time</string>
    <string name="text_none">None</string>
    <string name="text_repeat">Repeat</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_confirm">Confirm</string>
    <string name="text_set_up_reminder">Set up deadline</string>
    <string name="text_remind_before">Remind before:</string>
    <string name="text_remind_before_format">Remind before: %1$s %2$s</string>
    <string name="text_remind_at_format">Remind at: %1$s</string>
    <string name="text_minutes">minutes</string>
    <string name="text_hours">hours</string>
    <string name="text_hour">hour</string>
    <string name="text_3_hours">3 hours</string>
    <string name="text_2_hours">2 hours</string>
    <string name="text_1_hour">1 hour</string>
    <string name="text_30_mins">30 mins</string>
    <string name="text_15_mins">15 mins</string>
    <string name="text_10_mins">10 mins</string>
    <string name="text_5_mins">5 mins</string>
    <string name="text_set_up_repetition">Set up repetition</string>
    <string name="text_daily">Daily</string>
    <string name="text_weekly">Weekly</string>
    <string name="text_monthly">Monthly</string>
    <string name="text_repeat_every">Repeat every</string>
    <string name="text_repeat_in">Repeat In</string>
    <string name="text_repeat_end_in">Repeat end in</string>
    <string name="text_sun">Sun</string>
    <string name="text_sat">Sat</string>
    <string name="text_fri">Fri</string>
    <string name="text_thu">Thu</string>
    <string name="text_wed">Wed</string>
    <string name="text_tue">Tue</string>
    <string name="text_mon">Mon</string>
    <string name="text_task_name_must_not_be_empty">Task name must not be empty</string>
    <string name="text_day">day</string>
    <string name="text_days">days</string>
    <string name="text_week">week</string>
    <string name="text_weeks">weeks</string>
    <string name="text_month">month</string>
    <string name="text_months">months</string>
    <string name="text_no_category">No Category</string>
    <string name="text_create_new_category">Create new category</string>
    <string name="deadline_must_be_greater_than_10_minutes_from_now">Deadline must be greater than 10 minutes from now.</string>
    <string name="invalid_time_to_remind">Invalid time to remind.</string>
    <!--    to do list fragment-->

</resources>