<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="@dimen/margin_16"
        android:layout_marginTop="@dimen/margin_16"
        android:text="@string/text_set_up_reminder"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_20"
        android:textStyle="bold" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switchReminder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/tvTitle"
        android:layout_alignBottom="@id/tvTitle"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="@dimen/margin_16"
        android:checked="false" />

    <LinearLayout
        android:id="@+id/layoutTimer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvTitle"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:orientation="vertical">

        <TimePicker
            android:id="@+id/timerPicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_20"
            android:timePickerMode="spinner" />

        <TextView
            android:id="@+id/tvErrorTimer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/deadline_must_be_greater_than_10_minutes_from_now"
            android:textColor="@color/red"
            android:textStyle="italic"
            android:visibility="gone" />

    </LinearLayout>

    <TextView
        android:id="@+id/tvReminder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/layoutTimer"
        android:layout_marginStart="@dimen/margin_60"
        android:layout_marginTop="@dimen/margin_20"
        android:drawablePadding="@dimen/padding_16"
        android:text="@string/text_remind_before"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_16"
        app:drawableStartCompat="@drawable/ic_alarm" />

    <TextView
        android:id="@+id/tvReminderValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/layoutTimer"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="@dimen/margin_60"
        android:layout_marginTop="@dimen/margin_20"
        android:layout_marginEnd="@dimen/margin_60"
        android:text="@string/text_none"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_16" />

    <HorizontalScrollView
        android:id="@+id/layoutSuggestion1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvReminderValue"
        android:layout_marginTop="@dimen/margin_16"
        android:paddingHorizontal="@dimen/padding_16"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvNone"
                android:layout_width="88dp"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_btn_date_selected"
                android:gravity="center"
                android:text="@string/text_none"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv5Minutes"
                android:layout_width="88dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_8"
                android:background="@drawable/bg_btn_date_unselected"
                android:gravity="center"
                android:text="@string/text_5_mins"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv10Minutes"
                android:layout_width="88dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_8"
                android:background="@drawable/bg_btn_date_unselected"
                android:gravity="center"
                android:text="@string/text_10_mins"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv15Minutes"
                android:layout_width="88dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_8"
                android:background="@drawable/bg_btn_date_unselected"
                android:gravity="center"
                android:text="@string/text_15_mins"
                android:textSize="16sp" />

        </LinearLayout>
    </HorizontalScrollView>

    <HorizontalScrollView
        android:id="@+id/layoutSuggestion2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layoutSuggestion1"
        android:layout_marginTop="@dimen/margin_16"
        android:paddingHorizontal="@dimen/padding_16"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv30Minutes"
                android:layout_width="88dp"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_btn_date_unselected"
                android:gravity="center"
                android:text="@string/text_30_mins"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv1Hour"
                android:layout_width="88dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_8"
                android:background="@drawable/bg_btn_date_unselected"
                android:gravity="center"
                android:text="@string/text_1_hour"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv2Hours"
                android:layout_width="88dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_8"
                android:background="@drawable/bg_btn_date_unselected"
                android:gravity="center"
                android:text="@string/text_2_hours"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv3Hours"
                android:layout_width="88dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_8"
                android:background="@drawable/bg_btn_date_unselected"
                android:gravity="center"
                android:text="@string/text_3_hours"
                android:textSize="16sp" />

        </LinearLayout>
    </HorizontalScrollView>

    <LinearLayout
        android:id="@+id/layoutDivider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layoutSuggestion2"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvErrorRemindBefore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_8"
            android:text="@string/invalid_time_to_remind"
            android:textColor="@color/red"
            android:textStyle="italic"
            android:visibility="gone" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginHorizontal="@dimen/margin_16"
            android:layout_marginTop="@dimen/margin_16"
            android:background="#DDDDDD" />
    </LinearLayout>

    <TextView
        android:id="@+id/btnConfirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/layoutDivider"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="@dimen/margin_20"
        android:layout_marginEnd="@dimen/margin_40"
        android:text="@string/text_confirm"
        android:textColor="@color/blue500"
        android:textSize="@dimen/text_size_16"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/btnCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/layoutDivider"
        android:layout_marginTop="@dimen/margin_20"
        android:layout_marginEnd="@dimen/margin_20"
        android:layout_marginBottom="@dimen/margin_20"
        android:layout_toStartOf="@id/btnConfirm"
        android:text="@string/text_cancel"
        android:textColor="@color/blueLight"
        android:textSize="@dimen/text_size_16"
        android:textStyle="bold" />
</RelativeLayout>