<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:cardCornerRadius="@dimen/margin_8">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_16"
            android:layout_marginTop="@dimen/margin_16"
            android:text="Create new category"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_20"
            android:textStyle="bold" />

        <!-- Item Name -->
        <EditText
            android:id="@+id/edtCategoryName"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_64"
            android:layout_below="@id/tvHeader"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="@dimen/margin_8"
            android:layout_marginTop="@dimen/margin_8"
            android:layout_marginEnd="@dimen/margin_8"
            android:layout_marginBottom="@dimen/margin_8"
            android:background="@drawable/bg_edt_rounded"
            android:hint="@string/text_create_new_task_here"
            android:padding="@dimen/padding_16" />

        <TextView
            android:id="@+id/btnConfirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/edtCategoryName"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="@dimen/margin_20"
            android:layout_marginEnd="@dimen/margin_40"
            android:text="@string/text_confirm"
            android:textColor="@color/blue500"
            android:textSize="@dimen/text_size_16"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/edtCategoryName"
            android:layout_marginTop="@dimen/margin_20"
            android:layout_marginEnd="@dimen/margin_20"
            android:layout_marginBottom="@dimen/margin_20"
            android:layout_toStartOf="@id/btnConfirm"
            android:text="@string/text_cancel"
            android:textColor="@color/blueLight"
            android:textSize="@dimen/text_size_16"
            android:textStyle="bold" />
    </RelativeLayout>

</androidx.cardview.widget.CardView>